devops/fitness-project/k8s/05-backend.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: fitness
spec:
  selector:
    app: backend
  ports:
    - name: http
      port: 5000
      targetPort: 5000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: fitness
spec:
  replicas: 3
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1        # allow 1 extra Pod during update
      maxUnavailable: 0  # never drop below declared replicas (HA, 0-downtime)
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      terminationGracePeriodSeconds: 20
      containers:
        - name: backend
          image: ghcr.io/acodes3/fitness-backend:latest
          imagePullPolicy: IfNotPresent

          ports:
            - containerPort: 5000

          readinessProbe:
            httpGet:
              path: /healthz
              port: 5000
            initialDelaySeconds: 5
            periodSeconds: 5
            timeoutSeconds: 2
            failureThreshold: 6

          livenessProbe:
            httpGet:
              path: /livez
              port: 5000
            initialDelaySeconds: 20
            periodSeconds: 10
            timeoutSeconds: 2
            failureThreshold: 6

          # -------------------------
          # Resource management
          # -------------------------
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 500m
              memory: 256Mi
